# crynux-worker

./: .gitignore  README.md  crynux_worker_process.py  patches.txt  pyproject.toml  requirements.txt
patches/src/: 2.0.0.patch  2.1.0.patch  2.1.0b.patch  2.1.1.patch  2.5.1.patch  2.5.2.patch  3.0.0.patch  3.0.1.patch
patches/windows/: 2.1.0.patch  2.1.0b.patch  2.1.1.patch  2.5.1.patch  2.5.2.patch  3.0.0.patch  3.0.1.patch
src/crynux_worker/: __init__.py  config.py  log.py  model_cache.py  worker.py
src/crynux_worker/model/: __init__.py  input.py  resp.py  result.py  task.py  worker.py
src/crynux_worker/task/: __init__.py  download.py  inference.py  model_mutex.py  prefetch.py  runner.py  worker.py
